correction text align

--- a/src/components/Home/Banner/Banner.scss
+++ b/src/components/Home/Banner/Banner.scss
@@ -22,6 +22,7 @@
       font-weight: lighter;
       line-height: 1.3em;
       color: $gray-color-dark;
+      text-align: justify;
     }
   }
   
