--- a/src/components/Home/Info/Info.scss
+++ b/src/components/Home/Info/Info.scss
@@ -45,6 +45,7 @@
         p{
           line-height: 1.8em;
           color: $gray-color-dark;
+          text-align: justify;
           &:first-child{
             margin-bottom: 1em;
           }
